--- a/dkdo.texi
+++ b/dkdo.texi
@@ -96,7 +96,7 @@ Foundation GNU Free Documentation Licence.
 * Overview::
 * Getting Started::
 * Known Issues::
-* History::
+* History and Changes::
 @end menu
 
 @node Overview
@@ -146,12 +146,17 @@ subgroup @code{dkdo}.
 All timestamps in the do list must be in ISO format
 (YYYY-MM-DD). Other formats are not supported.
 
-@node History
-@section History
+@node History and Changes
+@section History and Changes
 
-This package was written between 2010-07-23 and 2010-11-24
+Package dkdo was written between 2010-07-23 and 2010-11-24
 to replace manual editing of a similarly structured do list
 file.
+
+@table @asis
+@item Version 1.1 20131104:
+Initial release as package.
+@end table
 
 @node Data
 @chapter Data
